--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -603,6 +603,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-size: 20px;
+    color: #333;
 }
 .game_detail_item5{
     margin-bottom: 24px;
