修改了赛事赛程列表页日历问题

--- a/V1/css/match_list.css
+++ b/V1/css/match_list.css
@@ -26,6 +26,8 @@
 }
 .game_right{
     padding-top: 150px;
+    height: calc(100vh - 150px);
+    /* height: calc(100% - 100px); */
 }
 .game3_detail_ul{
     position: fixed;
@@ -85,6 +87,32 @@
 .calendar1 li span.week {
     margin-bottom: 18px;
 }
+.game_right_{
+    position: fixed;
+    width: 320px;
+    overflow-y: scroll;
+    z-index: 20;
+    height: calc(100vh - 150px);
+}
+ /*滚动条整体样式*/
+ .game_right_::-webkit-scrollbar {
+    width: 4px;
+    height: 1px;
+}
+/*滚动条滑块*/
+.game_right_::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    -webkit-event_detail_content-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    background: #ccc;
+    height: 168px;
+}
+/*滚动条轨道*/
+.game_right_::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 4px;
+    background: rgba(0,0,0,0);
+}
+
 @media only screen and (max-width: 1024px){
     .calendar{
         width: 100%;
