--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -779,6 +779,90 @@
     width: 100%;
     height: 100%;
 }
+.war_report_detail_top{
+    display: flex;
+    height: 20px;
+    align-items: center;
+    margin-bottom: 12px;
+}
+.war_report_detail_top img{
+    width: 24px;
+    height: 20px;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+.war_report_detail_top p{
+    font-size: 20px;
+    color: #333;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    height: 20px;
+    line-height: 20px;
+}
+.war_report_detail_top p span{
+    color: #FF6649;
+    font-weight: 500;
+    font-size: 20px;
+    height: 20px;
+    line-height: 20px;
+    margin: 0 2px;
+}
+.war_report_detail .firstStep{
+    font-size: 18px;
+    color: #333;
+    font-weight: 500;
+    height: 24px;
+    line-height: 24px;
+    padding-left: 38px;
+    position: relative;
+    margin-bottom: 14px;
+}
+.war_report_detail .firstStep span{
+    display: block;
+    width: 24px;
+    height: 24px;
+    color: #fff;
+    background: #FF6649;
+    border-radius: 50%;
+    overflow: hidden;
+    text-align: center;
+    line-height: 24px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.war_report_detail  .pl38{
+    padding-left: 38px;
+    margin-bottom: 12px;
+}
+.secondStep,.thirdStep {
+    display: flex;
+    margin-bottom: 4px;
+}
+.war_report_detail .secondStep_img,.war_report_detail .thirdStep_img{
+    width: 20px;
+    height: 20px;
+    position: relative;
+    margin-right: 18px;
+}
+.war_report_detail .secondStep_img img,.war_report_detail .thirdStep_img img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+.war_report_detail p, .war_report_detail span{
+    font-weight: 400;
+}
+.war_report_detail .firstStep p{
+    font-weight: 500;
+}
+.war_report_detail_top p{
+    font-weight: 550;
+}
 /* 移动 */
 @media only screen and (max-width: 1024px){
     .dota2_div{
