--- a/V1/css/right.css
+++ b/V1/css/right.css
@@ -258,7 +258,7 @@
         padding: 0 20px;
     }
     .game_team_depiction p{
-        font-size: 24px;
+        font-size: .24rem;
     }
     /* 最新赛事 */
     .game_match{
