修改了一些样式

--- a/V1/css/newevents.css
+++ b/V1/css/newevents.css
@@ -512,10 +512,10 @@
     background-position: center;
     padding: 22px 20px 22px 36px;
 }
-.top_twoimg{
+/* .top_twoimg{
     width: 88px;
     height: 88px;
-}
+} */
 .top_two .team{
     position: relative;
     width: 88px;
