--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -35,10 +35,17 @@
     width: 128px;
     height: 128px;
     margin: 0 auto;
+    position: relative;
 }
 .game_team1_img img{
     display: block;
     margin: 0 auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
 } 
 .game_team1 span{
     font-size: 24px;
