--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -825,7 +825,7 @@
     font-size: 18px;
     color: #333;
     font-weight: 500;
-    height: 24px;
+    /* height: 24px; */
     line-height: 24px;
     padding-left: 38px;
     position: relative;
