--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -841,7 +841,9 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 }
 .table-wrap .table tr th:nth-of-type(2), .table-wrap .table tr td:nth-of-type(2) {
     width: 25%;
-	font-size:0;
+}
+.table-wrap .table tr td:nth-of-type(2){
+    font-size:0;
 }
 .table-wrap .table tr th:nth-of-type(3), .table-wrap .table tr td:nth-of-type(3) {
     width: 10%;
@@ -864,9 +866,11 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 .table-wrap .table tbody tr {
     border-top: 1px solid rgba(0,0,0,0.04);
     height: 68px;
+    /* padding: 0; */
 }
 .table-wrap .table tbody td {
     height: 56px;
+    padding: 0;
 }
 .table-wrap .table tr td:nth-of-type(1) {
     padding-left: 10px;
@@ -1403,10 +1407,22 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
         margin-right: .14rem;
         margin-bottom: .14rem;
     }
+    .bans_pincks td .bans_picks_div img.vs_player_game img{
+        display: block!important;
+    }
+    .bans_pincks td .bans_picks_div img{
+        display: block!important;
+    }
+    .bans_pincks td .bans_picks_div img{
+        display: block!important;
+    }
     .vs_data_combat {
         width: 100%;
     }
     .vs_data2_item .left{
         width: 48%;
+    }
+    .game_detail_item4 .left{
+        width: 3rem;
     }
   }
