--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -665,6 +665,9 @@
     border-radius: 50%;
     overflow: hidden;
 }
+.vs_player_game img{
+	display:block;
+}
 .vs_player_game{
     left: 0;
     z-index: 2;
@@ -1407,7 +1410,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
         margin-right: .14rem;
         margin-bottom: .14rem;
     }
-    .bans_pincks td .bans_picks_div img.vs_player_game img{
+    .bans_pincks td .bans_picks_div img,.vs_player_game img{
         display: block!important;
     }
     .bans_pincks td .bans_picks_div img{
