--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -650,11 +650,18 @@
 .vs_data1 li.active a{
     color: #FF6649;
 }
+.vs_data1 li.active {
+    color: #FF6649;
+}
 .vs_data1 li:nth-last-child(1){
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
 .vs_data1 li a{
+    font-size: 18px;
+    color: #666;
+}
+.vs_data1 li{
     font-size: 18px;
     color: #666;
 }
