--- a/V1/css/newevents.css
+++ b/V1/css/newevents.css
@@ -649,11 +649,18 @@
     height: 42px;
     vertical-align: middle;
     display: inline-block;
+    position: relative;
 }
 .thumb_others_img img{
     width: 42px;
-    height: 42px;
+    /* height: 42px; */
     display: block;
+    position: absolute;
+    left: 0;
+    margin: auto;
+    bottom: 0;
+    right: 0;
+    top: 0;
 }
 .thumb_others_name{
     width: 120px;
