--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -221,7 +221,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
         width: 100%;
     }
     .news_top_content p{
-        font-size: .26em!important;
+        font-size: .26rem!important;
         line-height: .42rem;
         font-weight: 400;
 		color: #333!important;
