--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -139,7 +139,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 10px;
 }
 .news_top_content{
-    word-break: break-all;
+    word-break: break-word;
     text-align: justify;
     width: 100%;
     border-top: 1px solid #eee;
@@ -156,11 +156,11 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     font-size: 18px;
     color: #333;
     margin-bottom: 20px;
-    text-indent: 2em;
+    /* text-indent: 2em; */
 }
 .news_top_content{
 	width:820px;
-    word-break: break-all;
+    word-break: break-word;
     text-align: justify;
     font-size: 18px !important;
     color: #333!important;
@@ -192,12 +192,12 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 }
 /* 2021.6.2新增 */
 .news_top_content *{
-    word-break: break-all;
+    word-break: break-word;
     text-align: justify;
     font-size: 18px !important;
     color: #333!important;
     margin-bottom: 20px;
-    text-indent: 2em;
+    /* text-indent: 2em; */
     font-family: shuzi1!important;
     line-height: 28px;
 }
